force-app/main/default/objects/Quote/fields/Primary_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_First_Name__c</fullName>
    <formula>Primary_Quote_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact First Name</label>
    <type>Text</type>
</CustomField>