force-app/main/default/objects/Quote/fields/Primary_Quote_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote_Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Add-On Quote Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Primary Quote Billing Contact)</relationshipLabel>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>