force-app/main/default/objects/Quote/fields/Primary_Quote_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Add-On Quote Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Primary Quote Contact)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>