force-app/main/default/objects/Quote/fields/Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Profit_Margin__c</fullName>
    <formula>Gross_Margin__c / Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>