force-app/main/default/objects/Quote/fields/Proposal_Formula__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Formula__c</fullName>
    <formula>IF(TEXT( Opportunity.Owner.Country__c ) = &quot;CA&quot;, &apos;a0G0O000018nOgy&apos;,
IF(TEXT(Opportunity.Owner.Country__c ) = &quot;UK&quot;, &apos;a0G0O000017hfe2&apos;,
IF(TEXT(Opportunity.Owner.Country__c ) = &quot;US&quot;, &apos;a0G0O000018nOgt&apos;,
IF(TEXT(Opportunity.Owner.Country__c ) = &quot;AU&quot;, &apos;a0G0O000018nUcl&apos;,
IF(TEXT(Opportunity.Owner.Country__c ) = &quot;HK&quot;, &apos;a0G0O000018nUcg&apos;,
null
)
 )
  )
   )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Formula</label>
    <type>Text</type>
</CustomField>