force-app/main/default/objects/Quote/fields/Quote_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Closed_Date__c</fullName>
    <label>Quote Closed Date</label>
    <type>Date</type>
</CustomField>