force-app/main/default/objects/Quote/fields/Quote_Count__c.field-meta.xml
<CustomField>
    <fullName>Quote_Count__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Quote Count</label>
    <type>Checkbox</type>
</CustomField>