force-app/main/default/objects/Quote/fields/Quote_Owner__c.field-meta.xml
<CustomField>
    <fullName>Quote_Owner__c</fullName>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Owner - DO NOT USE</label>
    <type>Text</type>
</CustomField>