force-app/main/default/objects/Quote/fields/Quote_Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Template_Type__c</fullName>
    <label>Quote Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Combined Quote</fullName>
            </value>
            <value>
                <fullName>Individual Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>