force-app/main/default/objects/Quote/fields/Quote_Template_Values__c.field-meta.xml
<CustomField>
    <fullName>Quote_Template_Values__c</fullName>
    <label>Quote Template Values</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Summary Prices Shown</fullName>
            </value>
            <value>
                <fullName>Total Price Shown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>