force-app/main/default/objects/Quote/fields/QuoteID18__c.field-meta.xml
<CustomField>
    <fullName>QuoteID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteID18</label>
    <type>Text</type>
</CustomField>