force-app/main/default/objects/Quote/fields/Reader_Purchase_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Reader_Purchase_Gross_Margin__c</fullName>
    <formula>IF(
ISBLANK(Reader_Purchase_Total_Amount__c), 0,
Reader_Purchase_Total_Amount__c - Reader_Purchase_Cost__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reader Purchase Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>