force-app/main/default/objects/Quote/fields/Reader_Purchase_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Reader_Purchase_Profit_Margin__c</fullName>
    <formula>IF(Reader_Purchase_Gross_Margin__c = 0, 0,
Reader_Purchase_Gross_Margin__c / Reader_Purchase_Total_Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reader Purchase Profit Margin %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>