force-app/main/default/objects/Quote/fields/Reader_Purchase_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Reader_Purchase_Quantity__c</fullName>
    <label>Reader Purchase Quantity</label>
    <summarizedField>QuoteLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Reader_Purchase__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>