force-app/main/default/objects/Quote/fields/Reader_Purchase_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reader_Purchase_Total_Amount__c</fullName>
    <label>Reader Purchase Total Amount</label>
    <summarizedField>QuoteLineItem.Total_Price_Formula__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Reader_Purchase__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>