force-app/main/default/objects/Quote/fields/Reader_Rental__c.field-meta.xml
<CustomField>
    <fullName>Reader_Rental__c</fullName>
    <label>Reader Rental</label>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_Category__c</field>
        <operation>equals</operation>
        <value>Reader Rental</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>