force-app/main/default/objects/Quote/fields/Reader_Rental_Cost__c.field-meta.xml
<CustomField>
    <fullName>Reader_Rental_Cost__c</fullName>
    <label>Reader Rental Cost</label>
    <summarizedField>QuoteLineItem.Total_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Reader_Rental__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>