force-app/main/default/objects/Quote/fields/Reader_Rental_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Reader_Rental_Gross_Margin__c</fullName>
    <formula>Reader_Rental_Total_Amount__c - Reader_Rental_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reader Rental Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>