force-app/main/default/objects/Quote/fields/Reader_Rental_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Reader_Rental_Profit_Margin__c</fullName>
    <formula>IF(Reader_Rental_Gross_Margin__c = 0, 0, 
Reader_Rental_Gross_Margin__c / Reader_Rental_Total_Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reader Rental Profit Margin %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>