force-app/main/default/objects/Quote/fields/Remote_Support_Required__c.field-meta.xml
<CustomField>
    <fullName>Remote_Support_Required__c</fullName>
    <label>Remote Support Required</label>
    <summarizedField>QuoteLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_Category__c</field>
        <operation>equals</operation>
        <value>Remote Staff</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>