force-app/main/default/objects/Quote/fields/Renewal_notes__c.field-meta.xml
<CustomField>
    <fullName>Renewal_notes__c</fullName>
    <description>Information regarding the renewal status of the annual subscription</description>
    <inlineHelpText>Information regarding the renewal status of the annual subscription</inlineHelpText>
    <label>Renewal notes</label>
    <type>TextArea</type>
</CustomField>