force-app/main/default/objects/Quote/fields/SaaS__c.field-meta.xml
<CustomField>
    <fullName>SaaS__c</fullName>
    <label>SaaS</label>
    <summarizedField>QuoteLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_Family__c</field>
        <operation>equals</operation>
        <value>SaaS</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>