force-app/main/default/objects/Quote/fields/Sales_Commission_Top_Up__c.field-meta.xml
<CustomField>
    <fullName>Sales_Commission_Top_Up__c</fullName>
    <label>Sales Commission Top Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>