force-app/main/default/objects/Quote/fields/Sales_Commission_Top_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Commission_Top_Up_Date__c</fullName>
    <label>Sales Commission Top Up Date</label>
    <type>Date</type>
</CustomField>