force-app/main/default/objects/Quote/fields/Self_Sign_Up_Testing__c.field-meta.xml
<CustomField>
    <fullName>Self_Sign_Up_Testing__c</fullName>
    <label>Self Sign Up Testing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>