force-app/main/default/objects/Quote/fields/Send_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Emails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Invoice Emails</label>
    <type>Checkbox</type>
</CustomField>