force-app/main/default/objects/Quote/fields/Shared_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Shared_Commission_Amount__c</fullName>
    <label>BDM Commission Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>