force-app/main/default/objects/Quote/fields/Shared_Commission_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Shared_Commission_Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAM Commission Salesperson</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes4</relationshipName>
    <type>Lookup</type>
</CustomField>