force-app/main/default/objects/Quote/fields/Skip_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Skip_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will skip the creation of the Invoice for this Quote</description>
    <inlineHelpText>This will skip the creation of the Invoice for this Quote</inlineHelpText>
    <label>Skip Invoice</label>
    <type>Checkbox</type>
</CustomField>