force-app/main/default/objects/Quote/fields/Staff_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Staff_Event_Type__c</fullName>
    <label>Staff Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lunchtime Event</fullName>
            </value>
            <value>
                <fullName>Evening event</fullName>
            </value>
            <value>
                <fullName>Lunchtime &amp; evening event</fullName>
            </value>
            <value>
                <fullName>Multi day event</fullName>
            </value>
            <value>
                <fullName>Breakfast Event</fullName>
            </value>
            <value>
                <fullName>Online - no event</fullName>
            </value>
            <value>
                <fullName>Golf Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>