force-app/main/default/objects/Quote/fields/Staff_Required__c.field-meta.xml
<CustomField>
    <fullName>Staff_Required__c</fullName>
    <label>Staff Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>