force-app/main/default/objects/Quote/fields/Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total__c</fullName>
    <label>Amount - Pre Discount</label>
    <summarizedField>QuoteLineItem.Sub_Total__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>