force-app/main/default/objects/Quote/fields/Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_End_Date__c</fullName>
    <label>Subscription End Date</label>
    <type>Date</type>
</CustomField>