force-app/main/default/objects/Quote/fields/Table_Tablets_Required__c.field-meta.xml
<CustomField>
    <fullName>Table_Tablets_Required__c</fullName>
    <label>Table Tablets Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>