force-app/main/default/objects/Quote/fields/Tables__c.field-meta.xml
<CustomField>
    <fullName>Tables__c</fullName>
    <label>Tables</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>