force-app/main/default/objects/Quote/fields/Tax_Detail__c.field-meta.xml
<CustomField>
    <fullName>Tax_Detail__c</fullName>
    <label>Tax Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Detail</valueSetName>
    </valueSet>
</CustomField>