force-app/main/default/objects/Quote/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Timezone</valueSetName>
    </valueSet>
</CustomField>