force-app/main/default/objects/Quote/fields/Total_Amount_10__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_10__c</fullName>
    <formula>Total_Amount__c - (Total_Amount__c * 0.10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount - 10%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>