force-app/main/default/objects/Quote/fields/Total_Amount_Inc_Comm__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Inc_Comm__c</fullName>
    <formula>Total_Amount__c +  Predicted_Commission_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (Inc Com)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>