force-app/main/default/objects/Quote/fields/Total_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Costs__c</fullName>
    <label>Total Costs</label>
    <summarizedField>QuoteLineItem.Total_Cost__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>