force-app/main/default/objects/Quote/fields/Total_Ipads2__c.field-meta.xml
<CustomField>
    <fullName>Total_Ipads2__c</fullName>
    <label>Total Ipads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>