force-app/main/default/objects/Quote/fields/Total_Sales_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Commission__c</fullName>
    <formula>BDM__c + Sales_Commission_Top_Up__c +  Shared_Commission_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>