force-app/main/default/objects/Quote/fields/Total_Screens__c.field-meta.xml
<CustomField>
    <fullName>Total_Screens__c</fullName>
    <label>Total Screens</label>
    <summarizedField>QuoteLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_Category__c</field>
        <operation>equals</operation>
        <value>Screen</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>