force-app/main/default/objects/Quote/fields/Training_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Training_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes3</relationshipName>
    <type>Lookup</type>
</CustomField>