force-app/main/default/objects/Quote/fields/User_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>User_Email_Addresses__c</fullName>
    <description>Email address for each user with CMS access; by default each account includes 3 users</description>
    <inlineHelpText>Email address for each user with CMS access; by default each account includes 3 users</inlineHelpText>
    <label>User Email Addresses</label>
    <type>TextArea</type>
</CustomField>