force-app/main/default/objects/Quote/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Venue</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Record Type is not Venue.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>0120O000000RN0AQAW</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>