force-app/main/default/objects/Quote/fields/View_Quote__c.field-meta.xml
<CustomField>
    <fullName>View_Quote__c</fullName>
    <formula>HYPERLINK(&apos;https://givergy.force.com/webquote/s/quote?QuoteId=&apos;&amp; Id , &apos;View Quote&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Quote</label>
    <type>Text</type>
</CustomField>