force-app/main/default/objects/Quote/fields/Volunteer_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Training_Status__c</fullName>
    <label>Volunteer Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>