force-app/main/default/objects/Quote/fields/Website_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Website_Commission_Rate__c</fullName>
    <label>Commission Rate (inc. pay fee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>