force-app/main/default/objects/Quote/fields/Will_they_book__c.field-meta.xml
<CustomField>
    <fullName>Will_they_book__c</fullName>
    <label>Will they book?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Most likely</fullName>
            </value>
            <value>
                <fullName>Cannot get hold of them</fullName>
            </value>
            <value>
                <fullName>Very unlikely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>