force-app/main/default/objects/Quote/fields/X0_Quote__c.field-meta.xml
<CustomField>
    <fullName>X0_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>$0 Quote</label>
    <type>Checkbox</type>
</CustomField>