force-app/main/default/objects/Quote/recordTypes/Unlimited.recordType-meta.xml
<RecordType>
    <fullName>Unlimited</fullName>
    <active>true</active>
    <label>Unlimited</label>
</RecordType>