force-app/main/default/objects/Quote/validationRules/Event_Quote_Guest_Numbers_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Quote_Guest_Numbers_Completed</fullName>
    <active>true</active>
    <description>Check if Guest Numbers Completed for all Event Quotes</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Event&apos;,
ISPICKVAL(Status, &apos;Closed Won&apos;), 
ISCHANGED(Status),
Guest_Numbers_Completed__c = FALSE
)</errorConditionFormula>
    <errorMessage>Guest Numbers are required to Close Win an Event Quote</errorMessage>
</ValidationRule>