force-app/main/default/objects/Quote/validationRules/Quote_Name_Character_limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Name_Character_limit</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Name ) &gt; 80</errorConditionFormula>
    <errorMessage>Quote Name can not be more than 80 characters.</errorMessage>
</ValidationRule>