force-app/main/default/objects/Quote/validationRules/Status_and_Payment_Frequency.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_and_Payment_Frequency</fullName>
    <active>true</active>
    <description>Status = Closed Won and Payment Frequency = Blank</description>
    <errorConditionFormula>AND(
TEXT(Status) = &apos;Closed Won&apos;,
ISCHANGED(Status), 
ISBLANK(TEXT(Payment_Frequency__c)),
Opportunity.Commission_Event__c = 0
)</errorConditionFormula>
    <errorMessage>Payment Frequency is required for Closed Won Quotes</errorMessage>
</ValidationRule>