force-app/main/default/objects/Quote/listViews/Convert_to_Contract_Quotes.listView-meta.xml
<ListView>
    <fullName>Convert_to_Contract_Quotes</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Convert_to_contract__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Convert to Contract Quotes</label>
</ListView>