force-app/main/default/objects/Quote/listViews/mine.listView-meta.xml
<ListView>
    <fullName>mine</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Move_to_close_won__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Quotes</label>
</ListView>